Bug 1020400.  Remove empty-cells quirk, since no other UA has it.  r=heycam